# staticlib_compress

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: CompressException_8hpp.html  CompressException_8hpp_source.html  annotated.html  classes.html  classstaticlib_1_1compress_1_1CompressException-members.html  classstaticlib_1_1compress_1_1CompressException.html  classstaticlib_1_1compress_1_1compress__exception-members.html  classstaticlib_1_1compress_1_1compress__exception.html  classstaticlib_1_1compress_1_1deflate__sink-members.html  classstaticlib_1_1compress_1_1deflate__sink.html  classstaticlib_1_1compress_1_1detail_1_1DeflateDeleter-members.html  classstaticlib_1_1compress_1_1detail_1_1DeflateDeleter.html  classstaticlib_1_1compress_1_1detail_1_1Header-members.html  classstaticlib_1_1compress_1_1detail_1_1Header.html  classstaticlib_1_1compress_1_1detail_1_1InflateDeleter-members.html  classstaticlib_1_1compress_1_1detail_1_1InflateDeleter.html  classstaticlib_1_1compress_1_1detail_1_1LzmaDeleter-members.html  classstaticlib_1_1compress_1_1detail_1_1LzmaDeleter.html  classstaticlib_1_1compress_1_1inflate__source-members.html  classstaticlib_1_1compress_1_1inflate__source.html  classstaticlib_1_1compress_1_1lzma__sink-members.html  classstaticlib_1_1compress_1_1lzma__sink.html  classstaticlib_1_1compress_1_1lzma__source-members.html  classstaticlib_1_1compress_1_1lzma__source.html  classstaticlib_1_1compress_1_1zip__sink-members.html  classstaticlib_1_1compress_1_1zip__sink.html  compress_8hpp.html  compress_8hpp_source.html  compress__exception_8hpp.html  compress__exception_8hpp_source.html  deflate__sink_8hpp.html  deflate__sink_8hpp_source.html  dir_9c69452d0faf53d042ffc575a168f626.html  dir_c33d3ca81783b96de1fd366e75cb14d0.html  files.html  functions.html  functions_func.html  index.html  inflate__source_8hpp.html  inflate__source_8hpp_source.html  (+15 more)
docs/html/search/: all_61.js  all_63.js  all_64.js  all_68.js  all_69.js  all_6c.js  all_6d.js  all_6f.js  all_72.js  all_73.js  all_77.js  all_7a.js  all_7e.js  classes_63.js  classes_64.js  classes_68.js  classes_69.js  classes_6c.js  classes_7a.js  enums_7a.js  files_63.js  files_64.js  (+14 more)
include/staticlib/: compress.hpp
test/: CMakeLists.txt  deflate_sink_test.cpp  inflate_source_test.cpp  lzma_sink_test.cpp  lzma_source_test.cpp  zip_sink_test.cpp
test/data/: hello.txt.deflate  hello.txt.xz
(+8 files in other folders)
